--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@ body {
 }
 
 header {
-    height: 100px;
+    height: 50px;
     width: 1200px;
     margin: auto;
     background-color: white;
+}
+
+h1 {
+    font-size: 40px;
 }
 
 nav {
